# ModsTranslationPack

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pack.mcmeta  pyproject.toml  simple-diff.sh
.github/: CODEOWNERS  Pipfile  labeler.yml
.github/configs/: .release-please-manifest.json  changelog-types.json  labeler.yml  override_list.json  override_list.txt  release-please-config.json  versions.json
.github/scripts/: Common_Library.sh  assets_folder.sh  commit_formater.py  content_replacer.py  contributors_generator.py  image_resize.py  mcmeta_generate.py  modrinth_verify_exist.py  mods_counter.py  multiversions.py  multiversions.sh  override_changer.sh  override_mods.sh  override_script.py  pacther_mover.py  readme_replacer.py  summary_generate.py  verify_commit.sh  verify_folder.sh  verify_structure.py  verify_structure.sh  version_change.sh  version_extractor.py  version_matrix.py  version_replacer.py
.github/workflows/: Auto-Packer.yml  CI-CommentPR.yml  CI-Contributors.yml  CI-Labeler.yml  CI-ModsCounter.yml  CI-OverrideCache.yml  CI-Pack-Beta.yml  CI-Pack-PullRequest.yml  CI-Pack-Release.yml  CI-Pack-ReleasePlease.yml  CI-UploadR2.yml  CI-VerifyCommit.yml  CI-VerifyStructure.yml  CI_Release_Me.yml  Comment-PR.yml  Contributors.yml  Labeler.yml  ModsList-Updater.yml  Override-Cache.yml  Override-Test.yml  PR_Comment.yml  Release-Me.yml  Release_Me.yml  ResourcePacker.yml  Reusable-DeleteArtifact.yml  Reusable-ImageResize.yml  Reusable-MatrixSetup.yml  Scripts-Test.yml  (+9 more)
MultiVersions/: README.md
docs/: CONTRIBUTING.md  CorrectTranslateList.md  ModsList.md
(+1687 files in other folders)
